--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.super-schach</groupId>
 	<artifactId>schach</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.2</version>
 	<packaging>pom</packaging>
 	<dependencies>
 		<dependency>
@@ -72,8 +72,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<modules>
-		<module>ki</module>
-	</modules>
 </project>
