--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,11 @@
 	<version>0.2</version>
 	<packaging>jar</packaging>
 	<dependencies>
-
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
