--- a/src/com/superschach/superschach/spiel/GUI.properties
+++ b/src/com/superschach/superschach/spiel/GUI.properties
@@ -1,7 +1,7 @@
 hintergrund=marmor
 farbe_weiss=#FFFF99
 farbe_schwarz=#990000
-name=felix
+name=schachSpieler
 ton_an=true
 zweid=false
 form=standard
